--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "axios": "^0.16.2",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.0.1",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.1.0",
     "styled-components": "^3.2.5"
