--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "stylelint src/styles/*.js && react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom"
+    "start": "stylelint src/styles/*.js && react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
     "axios": "^0.16.2",
     "prop-types": "^15.5.10",
     "react": "^16.2.0",
-    "react-app-rewire-hot-loader": "^1.0.1",
-    "react-app-rewired": "^1.5.2",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.2.0",
+    "react-dom": "^16.4.0",
     "react-router-dom": "^4.1.2",
     "react-scripts": "1.1.0",
     "styled-components": "^3.2.5"
