fixed styling on single post and added categories to single post

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm run lint && react-scripts start",
+    "start": "npm run stylelint && react-scripts start",
     "build": "react-scripts build && npm run create-cname",
     "create-cname": "echo 'test-runebear.surge.sh' > build/CNAME",
     "deploy": "npm run build && surge build",
-    "lint": "stylelint src/**/*.jsx",
+    "stylelint": "stylelint src/**/*.jsx",
     "test": "react-scripts test --env=jsdom"
   },
   "dependencies": {
