--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run stylelint && react-scripts start",
-    "build": "react-scripts build && npm run create-cname",
+    "start": "npm run stylelint && react-app-rewired start",
+    "build": "react-app-rewired build && npm run create-cname",
     "create-cname": "echo 'test-runebear.surge.sh' > build/CNAME",
     "deploy": "npm run build && surge build",
     "stylelint": "stylelint src/**/*.jsx",
-    "test": "react-scripts test --env=jsdom"
+    "test": "react-app-rewired test --env=jsdom"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -19,6 +19,9 @@
     "styled-components": "^3.2.5"
   },
   "devDependencies": {
+    "react-app-rewire-hot-loader": "^1.0.1",
+    "react-app-rewired": "^1.5.2",
+    "react-hot-loader": "^4.3.3",
     "react-scripts": "1.1.0",
     "stylelint": "^9.2.1",
     "stylelint-config-recommended": "^2.1.0",
