--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-app-rewired build && npm run create-cname",
     "create-cname": "echo 'test-runebear.surge.sh' > build/CNAME",
     "deploy": "npm run build && surge build",
-    "stylelint": "stylelint src/**/*.jsx",
+    "stylelint": "stylelint src/**/*.jsx && stylelint src/**/*.js",
     "test": "react-app-rewired test --env=jsdom"
   },
   "dependencies": {
