--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "eslint-plugin-react-hooks": "0.0.0",
     "prop-types": "^15.5.10",
-    "react": "^16.2.0",
-    "react-dom": "^16.4.0",
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "16.7.0-alpha.0",
     "react-router-dom": "^4.1.2",
     "styled-components": "^3.2.5"
   },
