--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "runebear",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "private": true,
   "scripts": {
     "build": "react-scripts build && npm run create-cname",
@@ -15,8 +15,8 @@
     "axios": "^0.16.2",
     "eslint-plugin-react-hooks": "0.0.0",
     "prop-types": "^15.5.10",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "16.7.0-alpha.0",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
     "react-router-dom": "^4.1.2",
     "styled-components": "^3.2.5"
   },
