--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "npm run stylelint && npm start",
     "start": "react-scripts start",
     "stylelint": "stylelint src/**/**/*.js",
-    "test": "react-scripts test --env=jsdom"
+    "test:cypress": "cypress open",
+    "test:jest": "react-scripts test --env=jsdom"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -20,6 +21,7 @@
     "styled-components": "^3.2.5"
   },
   "devDependencies": {
+    "cypress": "^3.1.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "react-scripts": "1.1.0",
