--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "babel-polyfill": "^6.26.0",
     "prop-types": "^15.5.10",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
@@ -24,6 +25,8 @@
     "cypress": "^3.1.3",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
+    "install": "^0.12.2",
+    "npm": "^6.5.0",
     "react-scripts": "1.1.0",
     "stylelint": "^9.2.1",
     "stylelint-config-recommended": "^2.1.0",
